kustomize/base/kubedb-webhook-server/templates/autoscaler/mutating-webhook.yaml
---
# Source: kubedb/charts/kubedb-webhook-server/templates/autoscaler/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.autoscaling.kubedb.com
  labels:
    app.kubernetes.io/component: kubedb-autoscaler
    helm.sh/chart: kubedb-webhook-server-v0.27.0
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/version: "v0.27.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- name: mongodbautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mongodbautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
  - apiGroups: ["autoscaling.kubedb.com"]
    apiVersions: ["*"]
    resources: ["mongodbautoscalers"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: rabbitmqautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/rabbitmqautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: ["autoscaling.kubedb.com"]
      apiVersions: ["*"]
      resources: ["rabbitmqautoscalers"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: elasticsearchautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/elasticsearchautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
  - apiGroups: ["autoscaling.kubedb.com"]
    apiVersions: ["*"]
    resources: ["elasticsearchautoscalers"]
    operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: kafkaautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/kafkaautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: ["autoscaling.kubedb.com"]
      apiVersions: ["*"]
      resources: ["kafkaautoscalers"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: mariadbautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mariadbautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: ["autoscaling.kubedb.com"]
      apiVersions: ["*"]
      resources: ["mariadbautoscalers"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: mysqlautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/mysqlautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: ["autoscaling.kubedb.com"]
      apiVersions: ["*"]
      resources: ["mysqlautoscalers"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: postgresautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/postgresautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: ["autoscaling.kubedb.com"]
      apiVersions: ["*"]
      resources: ["postgresautoscalers"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: redisautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/redisautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: ["autoscaling.kubedb.com"]
      apiVersions: ["*"]
      resources: ["redisautoscalers"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
- name: redissentinelautoscalerwebhook.mutators.autoscaling.kubedb.com
  clientConfig:
    service:
      namespace: default
      name: kubernetes
      path: /apis/mutators.autoscaling.kubedb.com/v1alpha1/redissentinelautoscalerwebhooks
    caBundle: dW5rbm93bg==
  rules:
    - apiGroups: ["autoscaling.kubedb.com"]
      apiVersions: ["*"]
      resources: ["redissentinelautoscalers"]
      operations: ["CREATE", "UPDATE"]
  admissionReviewVersions: ["v1beta1"]
  failurePolicy: Ignore
  sideEffects: None
